--- a/popup.css
+++ b/popup.css
@@ -16,3 +16,16 @@ body {
 h1, h2, h3, h4, h5, h6 {
   margin-block-end: 0px;
 }
+
+input {
+  border: 1px solid grey;
+  border-radius: 3px;
+}
+
+input[data-valid=true] {
+  border-color: green;
+}
+
+input[data-valid=false] {
+  border-color: red;
+}
