--- a/content.css
+++ b/content.css
@@ -107,3 +107,84 @@ button#xl-replit-custom-tip-btn span:first-child {
   line-height: 1.2;
   font-size: var(--font-size-subhead-big);
 }
+
+div#xl-replit-custom-tip-popup-cont {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
+  z-index: 300000;
+  background: var(--background-overlay);
+  padding: var(--space-64) var(--space-32);
+  display: none;
+  flex-direction: column;
+  align-items: center;
+}
+
+div#xl-replit-custom-tip-popup-cont.show {
+  display: flex;
+}
+
+div#xl-replit-custom-tip-popup-cont #xl-replit-custom-tip-popup {
+  background: var(--background-default);
+  border: 1px solid var(--background-highest);
+  border-radius: var(--border-radius-8);
+  box-shadow: var(--shadow-2);
+  padding: var(--space-16);
+  --interactive-background: var(--background-higher);
+}
+
+div#xl-replit-custom-tip-popup-cont #xl-replit-custom-tip-popup h2 {
+  font-size: var(--font-size-header-default);
+  font-weight: var(--font-weight-medium);
+  line-height: var(--line-height-header-default);
+  margin-bottom: var(--space-16);
+}
+
+div#xl-replit-custom-tip-popup-cont #xl-replit-custom-tip-popup input {
+  border: 1px solid transparent;
+  border-color: var(--interactive-border);
+  border-radius: var(--border-radius-8);
+  background: var(--interactive-background);
+  padding: var(--space-4) var(--space-8);
+  margin-bottom: var(--space-16);
+  color: var(--foreground-default);
+  font-size: var(--font-size-default);
+  line-height: 22px;
+  font-family: var(--font-family-default);
+  outline: none;
+  transition-property: border-color, box-shadow;
+  transition-duration: 120ms;
+  transition-timing-function: ease-out;
+}
+
+div#xl-replit-custom-tip-popup-cont #xl-replit-custom-tip-popup input:focus {
+  box-shadow: 0 0 0 2px var(--accent-primary-default);
+  outline: transparent solid 2px;
+  outline-offset: 4px;
+  transition-property: border-color, box-shadow;
+  transition-duration: 120ms;
+  transition-timing-function: ease-out;
+}
+
+div#xl-replit-custom-tip-popup-cont #xl-replit-custom-tip-popup button {
+  cursor: pointer;
+  background: var(--interactive-background);
+  border: 1px solid transparent;
+  border-radius: var(--border-radius-8);
+  padding: var(--space-8);
+  height: 32px;
+  transition-property: background;
+  transition-duration: 120ms;
+  transition-timing-function: ease-out;
+  padding: var(--space-8);
+  display: inline-flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+div#xl-replit-custom-tip-popup-cont #xl-replit-custom-tip-popup button.primary {
+  background: var(--accent-primary-dimmer);
+}
