Implement basic settings

--- a/popup.css
+++ b/popup.css
@@ -34,3 +34,7 @@ input[data-valid='true'] {
 input[data-valid='false'] {
   border-color: red;
 }
+
+div#settings > div > * {
+  vertical-align: middle;
+}
