--- a/popup.css
+++ b/popup.css
@@ -27,6 +27,10 @@ input {
   border-radius: 3px;
 }
 
+input[data-valid] {
+  border-width: 2px;
+}
+
 input[data-valid='true'] {
   border-color: green;
 }
