--- a/content.css
+++ b/content.css
@@ -204,14 +204,14 @@ div#xl-replit-account-switcher-cont {
 #xl-replit-account-switcher-arrow {
   position: absolute;
   right: 10px;
-  top: 10px;
+  top: 13px;
   pointer-events: none;
 }
 
 select#xl-replit-account-switcher {
   appearance: none;
-  line-height: var(--lineHeight);
-  font-size: var(--fontSize);
+  line-height: var(--line-height-default);
+  font-size: var(--font-size-default);
   font-family: var(--font-family-default);
   padding-left: 32px;
   padding-right: 8px;
