Large cursor experiment

--- a/content.css
+++ b/content.css
@@ -226,3 +226,7 @@ select#xl-replit-account-switcher {
 #xl-tosdr-badge img {
   display: block;
 }
+
+[data-xl-replit-large-cursor="1"] .cm-cursor {
+  transform: scale(1.5);
+}
