--- a/src/css/xl.css
+++ b/src/css/xl.css
@@ -1,4 +1,101 @@
+/* TODO: download fonts */
+
+@font-face {
+  font-family: 'IBM Plex Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: local('IBM Plex Sans Regular'), local('IBMPlexSans-Regular'),
+    url('https://replit.com/public/fonts/ibm-plex-sans-v8-latin-regular.woff2')
+      format('woff2'),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+      url('https://replit.com/public/fonts/ibm-plex-sans-v8-latin-regular.woff')
+      format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+@font-face {
+  font-family: 'IBM Plex Sans';
+  font-style: italic;
+  font-weight: 400;
+  src: local('IBM Plex Sans Italic'), local('IBMPlexSans-Italic'),
+    url('https://replit.com/public/fonts/ibm-plex-sans-v8-latin-italic.woff2')
+      format('woff2'),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+      url('https://replit.com/public/fonts/ibm-plex-sans-v8-latin-italic.woff')
+      format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+@font-face {
+  font-family: 'IBM Plex Sans';
+  font-style: normal;
+  font-weight: 500;
+  src: local('IBM Plex Sans Medium'), local('IBMPlexSans-Medium'),
+    url('https://replit.com/public/fonts/ibm-plex-sans-v8-latin-500.woff2')
+      format('woff2'),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+      url('https://replit.com/public/fonts/ibm-plex-sans-v8-latin-500.woff')
+      format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+@font-face {
+  font-family: 'IBM Plex Sans';
+  font-style: italic;
+  font-weight: 500;
+  src: local('IBM Plex Sans Medium Italic'), local('IBMPlexSans-Medium-Italic'),
+    url('https://replit.com/public/fonts/ibm-plex-sans-v8-latin-500italic.woff2')
+      format('woff2'),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+      url('https://replit.com/public/fonts/ibm-plex-sans-v8-latin-500italic.woff')
+      format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+@font-face {
+  font-family: 'IBM Plex Sans';
+  font-style: normal;
+  font-weight: 600;
+  src: local('IBM Plex Sans Semibold'), local('IBMPlexSans-Semibold'),
+    url('https://replit.com/public/fonts/ibm-plex-sans-v8-latin-600.woff2')
+      format('woff2'),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+      url('https://replit.com/public/fonts/ibm-plex-sans-v8-latin-600.woff')
+      format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+@font-face {
+  font-family: 'IBM Plex Sans';
+  font-style: italic;
+  font-weight: 600;
+  src: local('IBM Plex Sans Semibold Italic'),
+    local('IBMPlexSans-Semibold-Italic'),
+    url('https://replit.com/public/fonts/ibm-plex-sans-v8-latin-600italic.woff2')
+      format('woff2'),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+      url('https://replit.com/public/fonts/ibm-plex-sans-v8-latin-600italic.woff')
+      format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
 body {
   background: var(--background-root);
   color: var(--foreground-default);
+  font-family: 'IBM Plex Sans', sans-serif;
+}
+
+.h1 {
+  font-size: 32px;
+  line-height: 1.25;
+  font-weight: 600;
+}
+
+.h2 {
+  font-size: 24px;
+  line-height: 1.333;
+}
+
+.h3 {
+  font-size: 20px;
+  line-height: 1.4;
+}
+
+.h4 {
+  font-size: 16px;
+  line-height: 1.375;
 }
