--- a/src/css/xl.css
+++ b/src/css/xl.css
@@ -77,6 +77,7 @@ body {
   background: var(--background-root);
   color: var(--foreground-default);
   font-family: 'IBM Plex Sans', sans-serif;
+  font-size: 14px;
 }
 
 .h1 {
