--- a/src/css/xl.css
+++ b/src/css/xl.css
@@ -105,7 +105,7 @@ button {
   padding: 8px;
   border-radius: 8px;
   border: 1px solid transparent;
-  background-color: var(--accent-primary-dimmer);
+  background-color: var(--background-default);
   color: var(--foreground-default);
   cursor: pointer;
 }
