--- a/src/css/xl.css
+++ b/src/css/xl.css
@@ -110,4 +110,9 @@ button {
   cursor: pointer;
 }
 
+button.outline {
+  background-color: transparent;
+  border-color: var(--outline-dimmest);
+}
+
 /* Classes for different variants will be injected at the end of this file */
